--- a/views/cars/new.ejs
+++ b/views/cars/new.ejs
@@ -5,22 +5,22 @@
 		<h1 class="form-headers">Create a new car rental ad</h1>
 		<form action="/cars" method="post">
 			<div class="form-group">
-				<input class="form-control" type="text" name="carMake" placeholder="Car make">
+				<input class="form-control" type="text" name="carMake" placeholder="Car make" required="">
 			</div>
 			<div class="form-group">
-				<input class="form-control" type="text" name="carModel" placeholder="Car model">
+				<input class="form-control" type="text" name="carModel" placeholder="Car model" required="">
 			</div>
 			<div class="form-group">
-				<input class="form-control" type="text" name="carYear" placeholder="Car year">
+				<input class="form-control" type="text" name="carYear" placeholder="Car year" required="">
 			</div>
 			<div class="form-group">
-				<input class="form-control" type="number" name="carPrice" placeholder="Price per day" min="0.01" step="0.01">
+				<input class="form-control" type="number" name="carPrice" placeholder="Price per day" min="0.01" step="0.01" required="">
 			</div>
 			<div class="form-group">
-				<input class="form-control" type="text" name="carImage" placeholder="Image URL of the car">
+				<input class="form-control" type="text" name="carImage" placeholder="Image URL of the car" required="">
 			</div>
 			<div class="form-group">
-				<input class="form-control" type="text" name="carDesc" placeholder="Short description of the car">
+				<input class="form-control" type="text" name="carDesc" placeholder="Short description of the car" required="">
 			</div>
 			<div class="form-group">
 				<button class="btn btn-lg btn-primary btn-block">Add car</button>
